# yfig

./: Makefile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  config.h  config.h.in  config.h.in:config.h.toappend  config.h.in:config.h.toappend~  config.h.toappend  config.status  configure  configure.ac  memo  test.fig
fig/: Makefile  Makefile.am  Makefile.in  fig-config.h  fig-histo.c  fig-io.h  fig-load.c  fig-save.c  fig-scene-pdf.c  fig-scene-svg.c  fig-scene-tex.c  fig-scene.c  figure.c  obj-any.c  obj-arc.c  obj-arrow.c  obj-boxhv.c  obj-compound.c  obj-ellipse.c  obj-hierarchy.c  obj-line.c  obj-spline.c  obj-text.c  obj-util.c  obj-vtable.c
fig/.deps/: libfig_a-fig-histo.Po  libfig_a-fig-load.Po  libfig_a-fig-save.Po  libfig_a-fig-scene-pdf.Po  libfig_a-fig-scene-svg.Po  libfig_a-fig-scene-tex.Po  libfig_a-fig-scene.Po  libfig_a-figure.Po  libfig_a-obj-any.Po  libfig_a-obj-arc.Po  libfig_a-obj-arrow.Po  libfig_a-obj-boxhv.Po  libfig_a-obj-compound.Po  libfig_a-obj-ellipse.Po  libfig_a-obj-hierarchy.Po  libfig_a-obj-line.Po  libfig_a-obj-spline.Po  libfig_a-obj-text.Po  libfig_a-obj-util.Po  libfig_a-obj-vtable.Po
fig/io/: xfig32-converter.c  xfig32-load.c  xfig32-save.c  xfig32.h
fig/obj-arrows/: 00.c  01.c  02to04.c  arrow-vtable-template.h
guigtk/: Makefile  Makefile.am  Makefile.in  guigtk-color.c  guigtk-dw-layout.c  guigtk-dw.c  guigtk-font.c  guigtk-init.c  guigtk-outdev-pixmap.c  guigtk-outdev-vt-ldaf-gc.c  guigtk-outdev-vt-ldaf.c  guigtk-outdev-vt.c  guigtk-resources.c  guigtk-util.c  guigtk.h  widgtk-button.c  widgtk-buttonPanel.c  widgtk-canvas.c  widgtk-canvas.h  widgtk-egs.c  widgtk-filebrowser.c  widgtk-menu.c  widgtk-simple-spinner.c  widgtk-simple.c
guigtk/.deps/: libguigtk_a-guigtk-canvas.Po  libguigtk_a-guigtk-color.Po  libguigtk_a-guigtk-dw-layout.Po  libguigtk_a-guigtk-dw.Po  libguigtk_a-guigtk-init.Po  libguigtk_a-guigtk-outdev-pixmap.Tpo  libguigtk_a-guigtk-outdev-vt.Po  libguigtk_a-guigtk-resources.Po  libguigtk_a-guigtk-util.Po  libguigtk_a-tmp_funct_list.Po  libguigtk_a-widgtk-button.Po  libguigtk_a-widgtk-buttonPanel.Po  libguigtk_a-widgtk-canvas.Po  libguigtk_a-widgtk-egs.Po  libguigtk_a-widgtk-filebrowser.Po  libguigtk_a-widgtk-menu.Po  libguigtk_a-widgtk-simple-spinner.Po  libguigtk_a-widgtk-simple.Po  yfig_gtk-tmp_funct_list.Po
guimingw/: Makefile.am  Makefile.in  guimingw-color.c  guimingw-init.c  guimingw.h  widmingw-spinner.c
guiqt/: Makefile  Makefile.am  Makefile.in  Makefile.qt  guiqt-color.cc  guiqt-create.cc  guiqt-dw-layout.cc  guiqt-dw.cc  guiqt-dw.h  guiqt-init.cc  guiqt-outdev-font.cc  guiqt-outdev-ldaf-gc.cc  guiqt-outdev-ldaf.cc  guiqt-outdev-pixmap.cc  guiqt-outdev-vt.cc  guiqt-resources.cc  guiqt-top.cc  guiqt-topform.cc  guiqt-util.cc  guiqt.h  guiqt.pro  guiqt.pro.in  moc_predefs.h  moc_widqt-button.cpp  moc_widqt-filebrowser.cpp  moc_widqt-menu.cpp  moc_widqt-simple-slin.cpp  moc_widqt-simple-spinner.cpp  moc_widqt-simple.cpp  widqt-button.cc  widqt-buttonPanel.cc  widqt-canvas.cc  widqt-egs.cc  widqt-filebrowser.cc  widqt-filebrowser.h  widqt-menu.cc  widqt-menu.h  widqt-simple-slin.cc  widqt-simple-slin.h  widqt-simple-spinner.cc  (+3 more)
guixt/: Makefile  Makefile.am  Makefile.in  guixt-color.c  guixt-create.c  guixt-dw-layout.c  guixt-dw.c  guixt-dw.h  guixt-event.c  guixt-font-pango.c  guixt-font-x11.c  guixt-init.c  guixt-outdev-vt-ldaf-gc.c  guixt-outdev-vt-ldaf.c  guixt-outdev-vt-pxm.c  guixt-outdev-vt.c  guixt-pixmap.c  guixt-resources.c  guixt-util.c  guixt.h  pangoxft-config.h  pangoxft-config.h.in  widxt-button.c  widxt-buttonPanel.c  widxt-canvas.c  widxt-egs.c  widxt-filebrowser.c  widxt-menu.c  widxt-simple-slin.c  widxt-simple-spinner.c  widxt-simple.c
guixt/.deps/: libguixt_a-guixt-color.Po  libguixt_a-guixt-create.Po  libguixt_a-guixt-dw-layout.Po  libguixt_a-guixt-dw.Po  libguixt_a-guixt-event.Po  libguixt_a-guixt-font-pango.Po  libguixt_a-guixt-init.Po  libguixt_a-guixt-outdev-vt.Po  libguixt_a-guixt-pixmap.Po  libguixt_a-guixt-resources.Po  libguixt_a-guixt-util.Po  libguixt_a-widxt-button.Po  libguixt_a-widxt-buttonPanel.Po  libguixt_a-widxt-canvas.Po  libguixt_a-widxt-egs.Po  libguixt_a-widxt-filebrowser.Po  libguixt_a-widxt-menu.Po  libguixt_a-widxt-simple-slin.Po  libguixt_a-widxt-simple-spinner.Po  libguixt_a-widxt-simple.Po
outdev/: Makefile  Makefile.am  Makefile.in  ldaf-hl-gc.c  ldaf-hl.c  outdev-config.h  outdev-drv.c  outdev-drv.h  outdev-vt.c  outdev.c  outdevPdf-image.c  outdevPdf-page.c  outdevPdf-priv.c  outdevPdf-priv.h  outdevPdf-vt.c  outdevPdf.c  pxm-hl.c  resources.c  string-hl.c  style-dbg.c  style-merge.c  style.c
outdev/latex/: outdevTex-vt.c  (+4 more)
tools/: Makefile  Makefile.am  Makefile.in  base-types-debug.c  base-types.c  bitmap-lighShadBtms.c  bitmap-pattBtms.c  bitmap.c  boxes.c  bpi-image.c  charset-others.c  charset-table-generate.c  charset-table-unicode.c  charset-table.h  charset-test.c  charset.c  cmdline.c  color-dbg.c  color-rgb2hlv.c  color.c  file.c  fileset.c  font-default.c  font.c  geo2d-ellipseToMLine.c  geo2d-rect.c  geo2d-splineToMLine.c  geo2d.c  globalvars.c  grid.c  imgfmt.c  lenunit.c  lnc.c  messagedriver.c  missing.c  papersize.c  range.c  string-builder.c  strings-convert.c  strings-filename.c  (+1 more)
vgui/: Makefile  Makefile.am  Makefile.in  vdw-color.c  vdw-console.c  vdw-gnv.c  vdw-gsls.c  vdw-pum.c  vdw-title.c  vdw-viewer-pts.c  vgui-accelkey.c  vgui-config.h  vgui-dw-layout.c  vgui-dw.c  vgui-efsm-points.c  vgui-efsm.c  vgui-main.c  vgui-mw.c  vgui-names.c  vgui-outdev.c  vgui-pixmap.c  vgui-print.c  vgui-resources.c  wid-button-fuf.c  wid-button.c  wid-buttonPanel.c  wid-canvas-action.c  wid-canvas-unit.c  wid-canvas.c  wid-canvasI.h  wid-egs.c  wid-filebrowser.c  wid-grp-angle.c  wid-grp-pt.c  wid-grp.c  wid-lvu-ddlpxm.c  wid-lvu-ddlstr.c  wid-lvu-in-num.c  wid-lvu-in-text.c  wid-lvu-in.c  (+8 more)
yfig/: Makefile  Makefile.am  Makefile.in
yfig2dev/: Makefile  Makefile.am  Makefile.in  ds.c  ds.h  gen-pdf.c  gen-svg.c  gen-tex.c  main.c  user-options-depths.c  user-options-depths.y  user-options.c  user-options.h  yfig2dev  yfig2dev-config.h
(+422 files in other folders)
